--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <td>Sim</td>
                 <td>Gif</td>
                 <td>Desenvolvimento</td>
-                <td><button class="btn-view" onclick="viewGif('C:\\Users\\home\\OneDrive\\Área de Trabalho\\Nova pasta (2)\\BA_GDF-FimdeAno_RESTAURANTE-COMUNITARIO_300x50.gif.gif')">Visualizar</button></td>
+                <td><button class="btn-view" onclick="viewGif('BA_GDF-FimdeAno_RESTAURANTE-COMUNITARIO_300x50.gif.gif')">Visualizar</button></td>
             </tr>
             <tr>
                  <td>2</td>
@@ -478,7 +478,7 @@
     </div>
 
     <div class="show-all" id="allGifs" style="display: none;">
-        <img src="C:\Users\home\OneDrive\Área de Trabalho\Nova pasta (2)\BA_GDF-FimdeAno_RESTAURANTE-COMUNITARIO_300x50.gif.gif" alt="300x50" style="width: 300px; height: 50px;">
+        <img src="BA_GDF-FimdeAno_RESTAURANTE-COMUNITARIO_300x50.gif.gif" alt="300x50" style="width: 300px; height: 50px;">
         <img src="C:\Users\home\OneDrive\Área de Trabalho\Nova pasta (2)\BA_GDF-FimdeAno_RESTAURANTE-COMUNITARIO_300X100.gif" alt="300x100" style="width: 300px; height: 100px;">
         <img src="C:\Users\home\OneDrive\Área de Trabalho\Nova pasta (2)\BA_GDF-FimdeAno_RESTAURANTE-COMUNITARIO_300x250.gif" alt="300x250" style="width: 300px; height: 250px;">
         <img src="C:\Users\home\OneDrive\Área de Trabalho\Nova pasta (2)\BA_GDF-FimdeAno_RESTAURANTE-COMUNITARIO_300x300.gif" alt="300x300" style="width: 300px; height: 300px;">
